tests/error/linear_errors/if_both_unused.err
Error: Drop violation (at $FILE:13:8)
   | 
11 | def foo(b: bool) -> int:
12 |     if b:
13 |         q = new_qubit()
   |         ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
